Fixed nav element spacing

--- a/src/components/Nav/NavItem.module.scss
+++ b/src/components/Nav/NavItem.module.scss
@@ -3,7 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	flex-basis: 100%;
-	justify-content: center;
+	justify-content: space-evenly;
 	align-items: center;
 	color: var(--color-text);
 	background: var(--color-default);
@@ -16,6 +16,10 @@
 
 	&:last-child {
 		border-right: none;
+	}
+
+	&--icon {
+		font-size: 1.4rem;
 	}
 
 	&--text {
